<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
    <string name="application_terminal">Terminal Emulator</string>
    <string name="preferences">Preferences</string>
    <string name="new_window">New window</string>
    <string name="close_window">Close window</string>
    <string name="window_list">Windows</string>
    <string name="new_session">New session</string>
    <string name="prev_window">Prev window</string>
    <string name="next_window">Next window</string>
    <string name="reset">Reset term</string>
    <string name="special_keys">Special keys</string>
    <string name="toggle_soft_keyboard">Toggle soft keyboard</string>

    <string name="reset_toast_notification">This window\'s terminal state has been reset.</string>

    <string name="enable_wakelock">Take WakeLock</string>
    <string name="disable_wakelock">Drop WakeLock</string>

    <string name="edit_text">Edit text</string>
    <string name="select_text">Select text</string>
    <string name="copy_all">Copy all</string>
    <string name="paste">Paste</string>
    <string name="send_control_key">Send control key</string>
    <string name="send_fn_key">Send fn key</string>

    <string name="window_title">Window %1$d</string>

    <string name="service_notify_text">Terminal session is running</string>

    <string name="process_exit_message">Terminal session finished%1$s</string>

    <!-- Preference dialog -->
    <string name="screen_preferences">Screen</string>

    <string name="title_statusbar_preference">Status bar</string>
    <string name="summary_statusbar_preference">Show/hide status bar.</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>

    <string name="title_orientation_preference">Screen orientation</string>
    <string name="summary_orientation_preference">Choose the screen orientation behavior.</string>
    <string name="dialog_title_orientation_preference">Screen orientation behavior</string>

    <string name="title_cursorstyle_preference">Cursor style</string>
    <string name="summary_cursorstyle_preference">Choose cursor style.</string>
    <string name="dialog_title_cursorstyle_preference">Cursor style</string>

    <string name="title_cursorblink_preference">Cursor blink</string>
    <string name="summary_cursorblink_preference">Choose cursor blink.</string>
    <string name="dialog_title_cursorblink_preference">Cursor blink</string>

    <string name="text_preferences">Text</string>

    <string name="title_utf8_by_default_preference">Default to UTF-8</string>
    <string name="summary_utf8_by_default_preference">Whether UTF-8 mode is enabled by default.</string>

    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>

    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>

    <string name="keyboard_preferences">Keyboard</string>

    <string name="title_backaction_preference">Back button behavior</string>
    <string name="summary_backaction_preference">Choose what pressing the back button does.</string>
    <string name="dialog_title_backaction_preference">Back button behavior</string>

    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>

    <string name="title_fnkey_preference">Fn key</string>
    <string name="summary_fnkey_preference">Choose Fn key.</string>
    <string name="dialog_title_fnkey_preference">Fn key</string>

    <string name="title_ime_preference">Input method</string>
    <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
    <string name="dialog_title_ime_preference">Input method</string>

    <string name="shell_preferences">Shell</string>

    <string name="title_termtype_preference">Terminal type</string>
    <string name="summary_termtype_preference">What terminal type to report to the shell.</string>
    <string name="dialog_title_termtype_preference">Terminal type</string>

    <string name="title_close_window_on_process_exit_preference">Close window on exit</string>
    <string name="summary_close_window_on_process_exit_preference">Whether a window should close when its shell exits.</string>

    <string name="title_verify_path_preference">Verify PATH entries</string>
    <string name="summary_verify_path_preference">Whether inaccessible directories should be removed from the PATH.</string>

    <string name="title_do_path_extensions_preference">Allow PATH extensions</string>
    <string name="summary_do_path_extensions_preference">Whether other apps should be allowed to provide additional commands (add to PATH).</string>

    <string name="title_allow_prepend_path_preference">Allow PATH prepend</string>
    <string name="summary_allow_prepend_path_preference">Whether other apps should be allowed to override existing commands (add to the beginning of PATH).</string>

    <string name="title_home_path_preference">HOME folder</string>
    <string name="summary_home_path_preference">Path to a writable folder to be used as HOME.</string>

    <string name="control_key_dialog_title">Control and Function Keys</string>
    <!-- The word CTRLKEY should be left un-translated. It will be replaced at run-time with the
         actual control key key name. -->
    <string name="control_key_dialog_control_text">CTRLKEY Space : Control-@ (NUL)\nCTRLKEY A..Z : Control-A..Z\nCTRLKEY 5 : Control-]\nCTRLKEY 6 : Control-^\nCTRLKEY 7 : Control-_\nCTRLKEY 9 : F11\nCTRLKEY 0 : F12</string>
    <string name="control_key_dialog_control_disabled_text">No control key set.</string>
    <!-- The word FNKEY should be left un-translated. It will be replaced at run-time with the
         actual function key key name. -->
    <string name="control_key_dialog_fn_text">FNKEY 1..9 : F1-F9\nFNKEY 0 : F10\nFNKEY W : Up\nFNKEY A : Left\nFNKEY S : Down\nFNKEY D : Right\nFNKEY P : PageUp\nFNKEY N : PageDown\nFNKEY T : Tab\nFNKEY L : | (pipe)\nFNKEY U : _ (underscore)\nFNKEY E : Control-[ (ESC)\nFNKEY X : Delete\nFNKEY I : Insert\nFNKEY H : Home\nFNKEY F : End\nFNKEY . : Control-\\\n</string>
    <string name="control_key_dialog_fn_disabled_text">No function key set.</string>

    <string name="confirm_window_close_message">Close this window?</string>

    <string name="alt_sends_esc">Alt key sends ESC</string>
    <string name="alt_sends_esc_summary_on">Alt key sends ESC.</string>
    <string name="alt_sends_esc_summary_off">Alt key does not send ESC.</string>

    <string name="title_mouse_tracking_preference">Send mouse events</string>
    <string name="summary_mouse_tracking_preference">Whether tap and scroll events should be sent as escape sequences to the terminal.</string>

    <string name="title_use_keyboard_shortcuts">Use Keyboard Shortcuts</string>
    <string name="use_keyboard_shortcuts_summary_on">Ctrl-Tab: cycle window, Ctrl-Shift-N: new window, Ctrl-Shift-V: paste.</string>
    <string name="use_keyboard_shortcuts_summary_off">Keyboard shortcuts disabled.</string>

    <!-- Arrays from arrays.xml -->
    <string-array name="entries_statusbar_preference">
        <item>Show status bar</item>
        <item>Hide status bar</item>
    </string-array>

    <string-array name="entries_orientation_preference">
        <item>Automatic</item>
        <item>Landscape</item>
        <item>Portrait</item>
    </string-array>

    <string-array name="entries_cursorblink_preference">
        <item>Non-blinking cursor</item>
        <item>Blinking cursor</item>
    </string-array>

    <string-array name="entries_cursorstyle_preference">
        <item>Rectangle</item>
        <item>Underline</item>
        <item>Vertical bar</item>
    </string-array>

    <string-array name="entries_fontsize_preference">
        <item>4 x 8 pixels</item>
        <item>6 pt</item>
        <item>7 pt</item>
        <item>8 pt</item>
        <item>9 pt</item>
        <item>10 pt</item>
        <item>12 pt</item>
        <item>14 pt</item>
        <item>16 pt</item>
        <item>20 pt</item>
        <item>24 pt</item>
        <item>28 pt</item>
        <item>32 pt</item>
        <item>36 pt</item>
        <item>42 pt</item>
        <item>48 pt</item>
        <item>64 pt</item>
        <item>72 pt</item>
        <item>96 pt</item>
        <item>144 pt</item>
        <item>288 pt</item>
    </string-array>

    <string-array name="entries_color_preference">
        <item>Black text on white</item>
        <item>White text on black</item>
        <item>White text on blue</item>
        <item>Green text on black</item>
        <item>Amber text on black</item>
        <item>Red text on black</item>
        <item>Holo blue text on black</item>
        <item>Solarized Light</item>
        <item>Solarized Dark</item>
        <item>Linux Console</item>
    </string-array>

    <string-array name="entries_backaction_preference">
        <item>Closes all terminal windows</item>
        <item>Closes this terminal window only</item>
        <item>Closes activity, leaving sessions running</item>
        <item>Sends ESC to terminal</item>
        <item>Sends TAB to terminal</item>
    </string-array>

    <string-array name="entries_controlkey_preference">
        <item>Jog ball</item>
        <item>\@ key</item>
        <item>Left Alt key</item>
        <item>Right Alt key</item>
        <item>Vol Up key</item>
        <item>Vol Down key</item>
        <item>Camera key</item>
        <item>None</item>
    </string-array>

    <string-array name="entries_fnkey_preference">
        <item>Jog ball</item>
        <item>\@ key</item>
        <item>Left Alt key</item>
        <item>Right Alt key</item>
        <item>Vol Up key</item>
        <item>Vol Down key</item>
        <item>Camera key</item>
        <item>None</item>
    </string-array>

    <string-array name="entries_ime_preference">
        <item>Character-based</item>
        <item>Word-based</item>
    </string-array>

    <!-- These are the 'short' names for the control keys. They are used in the special keys dialog. -->
    <string-array name="control_keys_short_names">
        <item>Ball</item>
        <item>\@</item>
        <item>Left-Alt</item>
        <item>Right-Alt</item>
        <item>Vol-Up</item>
        <item>Vol-Dn</item>
        <item>Camera</item>
        <item>None</item>
    </string-array>

    <!-- These are the 'short' names for the Fn keys. They are used in the special keys dialog. -->
    <string-array name="fn_keys_short_names">
        <item>Ball</item>
        <item>\@</item>
        <item>Left-Alt</item>
        <item>Right-Alt</item>
        <item>Vol-Up</item>
        <item>Vol-Dn</item>
        <item>Camera</item>
        <item>None</item>
    </string-array>
</resources>
